fix: per-event transactions + queue locks to prevent concurrent race conditions
- Extract event processing into SyncEventProcessor with @Transactional(REQUIRES_NEW)
  Each event commits independently, preventing Hibernate session poison
- Add ConcurrentHashMap<String, ReentrantLock> queue locks in SyncService
  Serializes concurrent queue-mutating events per queueId
- Add entityManager.clear() to flush stale open-in-view cache between events
- Fix patient_added position: use entry count instead of token number
  Ensures new patients always append to end regardless of token order
- SyncService becomes thin orchestrator: lock → delegate → unlock
  Pull logic and queue ID resolution remain in SyncService

Race conditions fixed:
- Concurrent dual call_now → one accepted, one rejected (verified)
- Concurrent call_now + remove same entry → one wins (verified)
- Concurrent double remove → one accepted (verified)
- Batch dual call in same push → second rejected (verified)
- 49/50 test cases passing (1 test setup issue, not a code bug)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>